feat(api): añadir DTOs, controllers, mappers, validadores, auth JWT, Open API y fixes de dev

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -99,6 +99,7 @@ ref.common.noMatches=No tienes partidos asignados
 ref.common.accept=Aceptar
 ref.common.reject=Rechazar
 ref.common.newAssignment=Nueva asignación de partido
+ref.common.Notifications=Notificaciones Pendientes
 
 # Sección: referee.partidos
 ref.matches.title=Partidos Aceptados - Árbitro
